@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020091118"
+#define public MagickPackageVersionAddendum ".020091121"
 #define public MagickPackageReleaseDate "unreleased"
