@@ -162,7 +162,7 @@ static Image *ReadGRAYImage(const ImageInfo *image_info,
     quantum_size=32;
 
   packet_size=quantum_size/8;
-  scanline=MagickAllocateMemory(unsigned char *,packet_size*image->tile_info.width);
+  scanline=MagickAllocateArray(unsigned char *,packet_size,image->tile_info.width);
   if (scanline == (unsigned char *) NULL)
     ThrowReaderException(ResourceLimitError,MemoryAllocationFailed,image);
   /*
@@ -490,7 +490,7 @@ static unsigned int WriteGRAYImage(const ImageInfo *image_info,Image *image)
       quantum_size=32;
     (void) TransformColorspace(image,RGBColorspace);
     packet_size=quantum_size/8;
-    scanline=MagickAllocateMemory(unsigned char *,packet_size*image->columns);
+    scanline=MagickAllocateArray(unsigned char *,packet_size,image->columns);
     if (scanline == (unsigned char *) NULL)
       ThrowWriterException(ResourceLimitError,MemoryAllocationFailed,image);
     /*
