@@ -21,6 +21,18 @@
 </tr>
 </table>
 <p>
+2009-11-21  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/constitute.c (ReadImage): Log subimage and subrange.
+
+  <LI> configure: Update to Autoconf 2.65.
+
+  <LI> magick/attribute.c (GenerateIPTCAttribute): Returned IPTC string
+        values were one character too short.
+
+</UL>
+<p>
 2009-11-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
