@@ -1,3 +1,12 @@
+2009-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/constitute.c (ReadImage): Log subimage and subrange.
+
+	* configure: Update to Autoconf 2.65.
+
+	* magick/attribute.c (GenerateIPTCAttribute): Returned IPTC string
+	values were one character too short.
+
 2009-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/image.c (AllocateImage): The documented shorthand for
